Override bootstrap classloader with rt_debug.jar
start_bayou.sh will launch with the classes compiled with debug symbols
in resource rt_debug.jar.